react/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: react
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
